--- a/articles/05.org
+++ b/articles/05.org
@@ -1,22 +1,22 @@
-# Officers
+* Officers
 
-## Terms of Service
+** Terms of Service
 
 Chapter officers shall be elected once every academic semester.
 All newly elected officers shall take office at the conclusion of the last chapter meeting for the semester.
 All outgoing officers shall transfer their files and explain the duties of the office to the incoming officers at or before the last meeting of the semester.
 
-## Election Date
+** Election Date
 
 Elections are to be held during or near the last three weeks of the semester as determined by the Executive Committee.
 
-## Officer Positions
+** Officer Positions
 
 The officer positions shall be determined each semester at the end of semester forum with quorum.
 Any officer may suggest a change in the position, but must be seconded by a current standing relevant officer or knowledgable executive member.
 The officer corp is able to add, remove, or alter any committee or adjust the committee size with a majority vote.
 
-## Vacancies
+** Vacancies
 
 If the active membership of the chapter is insufficient to fill existing positions, any two offices may be combined, or one individual may be elected to two offices.
 In addition to the specific duties listed below, each officer must perform any additional duties as delegated by the President.
