--- a/articles/07.org
+++ b/articles/07.org
@@ -1,4 +1,4 @@
-# Faculty Advisors
+** Faculty Advisors
 
 Mu Chapter shall have at least one Faculty Advisor who shall serve as liaison between the chapter and the college.
 Their role shall be as follows:
