--- a/articles/10.org
+++ b/articles/10.org
@@ -1,4 +1,4 @@
-# Funds
+* Funds
 
 There shall be a General Fund consisting of local chapter dues, fees, assessments, bank interest, and proceeds collected from other chapter activities.
 The general fund shall be used to pay all operating expenses of the chapter.
