--- a/articles/11.org
+++ b/articles/11.org
@@ -1,4 +1,4 @@
-# ASUC Sponsorship, Funding, and Space
+* ASUC Sponsorship, Funding, and Space
 
 This organization hereby wishes to seek ASUC sponsorship.
 This organization adopts and incorporates by reference Schedule A of ASUC Bylaw 2201,  and the same as may be amended from time to time, completely and fully as part of this Constitution.
