--- a/articles/12.org
+++ b/articles/12.org
@@ -1,9 +1,9 @@
-# Amendments
+* Amendments
 
-## Ratification
+** Ratification
 
 Amendment of these chapter Constitution must be approved by a unanimous vote of all active members present at regular meetings or by a two-thirds majority vote of all active members present at general meetings.
-All amendments, additions or deletions to this document must be filed with the LEAD Center at [lead@berkeley.edu](mailto:lead@berkeley.edu), or LEAD Center at 432 Eshleman Hall.
+All amendments, additions or deletions to this document must be filed with the LEAD Center at [[mailto:lead@berkeley.edu][lead@berkeley.edu]], or LEAD Center at 432 Eshleman Hall.
 The amended Chapter Constitution will become effective upon:
 
 1. The required Chapter vote.
@@ -12,10 +12,10 @@ The amended Chapter Constitution will become effective upon:
 
 All amendments, additions or deletions to this document must be filed with the LEAD Center in 432 Eshleman Hall.
 
-## Student Activities and Services
+** Student Activities and Services
 
 If this organization is a registered student group with the Student Activities and Services (102 Hearst Gym), no amendment may conflict with University of California regulations pertaining to registered student groups, and the Student Activities and Services must have an up to date copy of this document at all times.
 
-## Associated Students of the University of California
+** Associated Students of the University of California
 
 If this organization receives sponsorship or funding from the Associated Students of the University of California, no amendment may conflict with Associated Students of the University of California regulations pertaining to sponsored or funded student groups, and the Office of Student Affairs of the Associated Students of the University of California must have an up to date copy of this document at all times.
