--- a/articles/13.org
+++ b/articles/13.org
@@ -1,4 +1,4 @@
-# Dissolution
+* Dissolution
 
 The property of this chapter is irrevocably dedicated to charitable purposes and no part of the net income or assets of this chapter shall ever inure to the benefit of any officer or member thereof or to the benefit of any private person, or any organization not 501(c)(3) qualified by the IRS.
 Upon dissolution of the chapter, any assets remaining after payment, or provision of payment, of all debts and liabilities of the organization shall be returned to Eta Kappa Nu headquarters, which is organized and operated exclusively for charitable purposes and has established its tax exempt status under section 501(c)(3) of the Internal Revenue Code.
