--- a/articles/06.org
+++ b/articles/06.org
@@ -1,21 +1,21 @@
-# Executive Council
+* Executive Council
 
-## Order of Election
+** Order of Election
 
 The executive council consists of the President, Vice President, Treasurer, Recording Secretary, Corresponding Secretary, Department Relations, and Alumni Relations. Other officers may be elected to meet the Chapter’s needs.
 
-## Order of Succession
+** Order of Succession
 
 The order of succession will be President, Vice President, Recording Secretary, Corresponding Secretary, Treasurer, Department Relations, and Alumni Relations.
 Other elected positions will be set by the discretion of the incumbent executive council.
 The officer immediately below the vacant office shall assume the duties of both offices until a replacement can be elected.
 
-## Eligibility
+** Eligibility
 
 Candidates for the executive offices must have served as an officer in the organization, unless no former officers are able and willing to fill this position.
 Any vacancy in the offices of the Chapter shall be filled at the first regular meeting after the vacancy occurs, and when possible, before the vacancy occurs.
 
-## Power Oversight
+** Power Oversight
 
 The President shall oversee the operations of the entirety of HKN.
 
@@ -35,17 +35,17 @@ The Alumni Relations Officer shall oversee the relations between the chapter and
 
 As needed before elections, the Executive Committee may create or destroy other officer positions and shift duties correspondingly.
 
-# Governance
+** Governance
 
 The Executive Committee shall have the power to make decisions affecting the day-to-day operation of the chapter between regularly scheduled meetings.
 The Executive Committee shall serve as a planning committee for activities throughout the semester and shall propose the initial agenda for all meetings.
 
-## Quorum and Attendance
+** Quorum and Attendance
 
 A quorum for transaction of business at an Executive Meeting shall be a two-thirds majority.
 Executive committee meetings shall be open to all officers and members who wish to attend.
 The Faculty Advisor(s) is invited to all Executive Meetings, but is not required to attend.
 
-## Overturning Decisions
+** Overturning Decisions
 
 Decisions of the Executive Committee may be overturned by a two-thirds majority vote of the active members of the chapter.
