add titles to file name

--- a/articles/06-exec.org
+++ b/articles/06-exec.org
@@ -31,7 +31,7 @@ The Department Relations Officer shall oversee the relations between the chapter
 
 The Alumni Relations Officer shall oversee the relations between the chapter and alumni.
 
-## Other Positions
+** Other Positions
 
 As needed before elections, the Executive Committee may create or destroy other officer positions and shift duties correspondingly.
 
