--- a/index.org
+++ b/index.org
@@ -3,16 +3,16 @@
 # address: Eta Kappa Nu, 290 Cory Hall, Berkeley, CA 94720
 # date: 2023-07-29
 
-#+include: "./articles/01.org"
-#+include: "./articles/02.org"
-#+include: "./articles/03.org"
-#+include: "./articles/04.org"
-#+include: "./articles/05.org"
-#+include: "./articles/06.org"
-#+include: "./articles/07.org"
-#+include: "./articles/08.org"
-#+include: "./articles/09.org"
-#+include: "./articles/10.org"
-#+include: "./articles/11.org"
-#+include: "./articles/12.org"
-#+include: "./articles/13.org"
+#+include: "./articles/01-chapter-charter.org"
+#+include: "./articles/02-governance.org"
+#+include: "./articles/03-office.org"
+#+include: "./articles/04-membership.org"
+#+include: "./articles/05-officers.org"
+#+include: "./articles/06-exec.org"
+#+include: "./articles/07-faculty.org"
+#+include: "./articles/08-meetings.org"
+#+include: "./articles/09-dues.org"
+#+include: "./articles/10-funds.org"
+#+include: "./articles/11-asuc.org"
+#+include: "./articles/12-amendments.org"
+#+include: "./articles/13-dissolution.org"
