add ASUC clauses

--- a/articles/04-membership.org
+++ b/articles/04-membership.org
@@ -32,4 +32,9 @@ who are graduate students, faculty members, or professionals must have the writt
 ** Miscellaneous
 
 We will not haze according to California State Law.
+
 We will not restrict membership based upon race, color, national origin, religion, sex, gender identity, pregnancy (including pregnancy, childbirth, and medical conditions related to pregnancy or childbirth), physical or mental disability, medical condition (cancer related or genetic characteristics), ancestry, marital status, age, sexual orientation, citizenship, or service in the uniformed services (including membership, application for membership, performance of service, application for service, or obligation for service in the uniformed services.
+
+This organization agrees to adhere to the guidelines described in the [[https://docs.google.com/document/d/1ex7Won3HvV1lCDYtMSUIkHWaRrl-u0Biu8dMjPdKtIs/edit][RSO Sexual Violence and Sexual Harassment (SVSH) Prevention and Response Policy]] which aligns with the [[https://policy.ucop.edu/doc/4000385/SVSH][University of California’s Sexual Violence and Sexual Harassment Policy]].
+This RSO agrees to send at least one representative to participate in a Path to Care training annually.
+RSO will also follow the SVSH prevention and response guidelines if and when SVSH harm occurs within the organization.
